@@ -1,3 +1,10 @@
+2009-07-29  Siavash Safi  <siavashs@siavashs.org>
+
+	* clutter-gtk/clutter-gtkmm/utility.cc: Updated several functions to add
+	the GError argument
+	* examples/events/event.cc: Updated to build against the new cluttermm
+	trunk(patch by Milosz Derezynski)
+
 0.9.3:
 
 2009-05-15  Murray Cumming  <murrayc@murrayc.com>
